[package]
name = "nvrust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
pyo3 = { version = "0.23.5", features = ["auto-initialize", "extension-module"] }
thiserror = "2.0.11"

[lib]
name = "nvrust"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
