[package]
name = "nvrust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
once_cell = "1.21.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.0"
tracing = "0.1.41"
url = "2.5.4"
x509-parser = "0.17.0"
