[workspace]
resolver = "2"
members = [
    "remote-attestation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
base64 = "0.22.1"
blake3 = "1.6.1"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
nvml-wrapper = { git = "https://github.com/rust-nvml/nvml-wrapper.git", branch = "main" }
once_cell = "1.21.0"
rand = "0.8.5"
reqwest = "0.12.14"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.0"
tracing = "0.1.41"
url = "2.5.4"
x509-parser = "0.17.0"
